...
                            android:id="@+id/titleDetail"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginBottom="16dp"
                            android:text="@string/title"
                            android:textAlignment="textEnd"
                            android:textColor="@color/white"
                            android:textSize="24sp"
                            app:layout_constraintBottom_toTopOf="@+id/date"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/roundedImageView" />
...
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="16dp"
                            android:background="@drawable/background_user_score"
                            android:gravity="center"
                            android:text="@string/rating"
                            android:textColor="@color/white"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageButton
                            android:id="@+id/backButton"
...
                android:id="@+id/overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/synopsis"
                android:textColor="@color/black"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dividerBody" />

...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:text="@string/vote_count" />

                    <TextView
                        android:id="@+id/vote_count"
                        style="@style/TextSpec.Value"
                        tools:text="@string/content_specs" />
                </TableRow>
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:text="@string/popularity" />

                    <TextView
                        android:id="@+id/popularity"
                        style="@style/TextSpec.Value"
                        tools:text="@string/content_specs" />
                </TableRow>
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <TextView
                        style="@style/TextSpec.Field"
                        android:text="@string/orisinal_language" />

                    <TextView
                        android:id="@+id/orisinal_language"
                        style="@style/TextSpec.Value"
                        tools:text="@string/content_specs" />
                </TableRow>
...
<!--            android:layout_height="wrap_content"-->
<!--            android:paddingStart="25dp"-->
<!--            android:paddingTop="25dp"-->
<!--            tools:ignore="RtlSymmetry">-->

<!--            <com.makeramen.roundedimageview.RoundedImageView-->
<!--                android:id="@+id/image"-->
<!--                android:layout_width="145dp"-->
<!--                android:layout_height="245dp"-->
<!--                android:adjustViewBounds="true"-->
<!--                android:contentDescription="@string/app_name"-->
<!--                android:scaleType="fitXY"-->
<!--                android:src="@drawable/poster_a_start_is_born"-->
...
<!--                style="@style/TextContent"-->
<!--                android:layout_width="172dp"-->
<!--                android:layout_height="76dp"-->
<!--                android:layout_marginStart="24dp"-->
<!--                android:layout_marginTop="5dp"-->
<!--                android:textSize="20sp"-->
<!--                app:layout_constraintBottom_toTopOf="@+id/date_release"-->
<!--                app:layout_constraintStart_toEndOf="@+id/image"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:layout_constraintVertical_bias="0.0"-->
<!--                tools:text="@string/title" />-->

<!--            <TextView-->
...
<!--                android:textSize="14sp"-->
<!--                app:layout_constraintStart_toEndOf="@+id/image"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/subtitle"-->
<!--                tools:text="@string/rating" />-->

<!--            <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--                android:id="@+id/fab_favorite"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="140dp"-->
<!--                android:src="@drawable/ic_favorite"-->
<!--                android:background="?selectableItemBackground"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
...
