<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/favorite_destination"
        android:icon="@drawable/ic_favorite"
        android:orderInCategory="200"
        android:title="@string/favorite"
        app:showAsAction="always" />

</menu>